--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -1,8 +1,8 @@
 {% load static %}
-<nav class="navbar navbar-expand-md bg-primary" data-bs-theme="dark">
+<nav class="navbar navbar-expand-md bg-success" data-bs-theme="dark">
     <div class="container">
         <a class="navbar-brand" href="#">
-            <img src="{% static 'image/logo.svg' %}" class="logo" alt="">
+            <img src="{% static '/image/logo.svg' %}" class="logo" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,15 +16,18 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">{{ user.username }}</a>
                     </li>
+                {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'user:logout' %}">Logout</a>
                     </li>
+                {% else %}
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'user:registration' %}">Register</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'user:login' %}">Login</a>
                     </li>
+                {% endif %}
             </ul>
         </div>
     </div>
