--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -16,7 +16,13 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">{{ user.username }}</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'recipes:recipe_list' %}">Recipe List</a>
+                    </li>
                 {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'recipes:recipe_add' %}">Add Recipe</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'user:logout' %}">Logout</a>
                     </li>
