--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -13,9 +13,11 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'home:home' %}">Home</a>
                 </li>
+                    {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">{{ user.username }}</a>
                     </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'recipes:recipe_list' %}">Recipe List</a>
                     </li>
