--- a/recipes/templates/recipes/add_ingredients.html
+++ b/recipes/templates/recipes/add_ingredients.html
@@ -10,12 +10,13 @@
             </div>
         {% endfor %}
     {% endif %}
-    <h1>Add Ingredients</h1>>
+    <h1>Add Ingredients</h1>
     <form action="" method="post">
         {% csrf_token %}
         {{ form|crispy }}
-        <div>
-        <button type="submit" class="btn btn-success">Submit</button>
+        <div class="custom-btn-container-ms-2">
+        <button type="submit" class="btn btn-success">Add</button>
+        <a class="btn btn-danger" href="{% url 'recipes:delete_ingredients' pk=recipe.id %}" >Delete Ingredients</a>
         </div>
     </form>
     <h2>Ingredients:</h2>
