--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -27,3 +27,11 @@
     margin-right: 10px;
     margin-bottom: 30px;
 }
+
+.custom-btn-container-ms-3 {
+    display: inline-block;
+    margin-top: 15px;
+    margin-right: 10px;
+    margin-bottom: 30px;
+    transform: translate(269px, 0);
+}
