--- a/recipes/templates/recipes/delete_ingredients.html
+++ b/recipes/templates/recipes/delete_ingredients.html
@@ -16,6 +16,7 @@
         {{ form|crispy }}
         <div>
         <button type="submit" class="btn btn-success">Delete</button>
+        <a class="btn btn-primary" href="{% url 'recipes:add_ingredients' pk=recipe.id %}" >Back</a>
         </div>
     </form>
 {% endblock %}
