--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -21,9 +21,15 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'recipes:recipe_list' %}">Recipe List</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'recipes:plan_list' %}">Plan List</a>
+                    </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'recipes:recipe_add' %}">Add Recipe</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'recipes:add_plan' %}">Add Plan</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'user:logout' %}">Logout</a>
