--- a/recipes/templates/recipes/plan_delete.html
+++ b/recipes/templates/recipes/plan_delete.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block container %}
+    <h1>You are going to delete your plan!</h1>
     <form action="{% url 'recipes:plan_delete' pk=plan.pk  %}" method="post">
         {% csrf_token %}
         <h2 class="text-center mt-3">Are you sure you want to delete <b>{{ plan.name }}</b></h2>
