--- a/recipes/templates/recipes/recipe_details.html
+++ b/recipes/templates/recipes/recipe_details.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block container %}
+    <h1>Recipe Details</h1>
     <div class="row">
         <div class="col-md-3 col-md-offset-2">
         </div>
