--- a/recipes/templates/recipes/recipe_list.html
+++ b/recipes/templates/recipes/recipe_list.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block container %}
+    <h1>Recipe List</h1>
     <div class="row">
         <div class="col">
             <div class="card-group">
